--- a/config.jsonc
+++ b/config.jsonc
@@ -37,7 +37,7 @@
         "on-scroll-down": "hyprctl dispatch workspace r-1"
     },
     "custom/os_button": {
-        "format": "",
+        "format": "",
         "on-click": "wofi --show drun",
         "tooltip": false
     },
